# go-bitsong

./: .clog.yaml  .dockerignore  .envrc  .gitignore  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.ledger  Makefile.simulations  README.md  app.go  buf.yaml  chains.yaml  cliff.toml  consensus.proposal.json  docker-compose.yml  genesis-chainflow  go.mod  go.sum  list.json  out-list.json  proposal.json  sims.mk  test.json  testproposal.json
.github/: PULL_REQUEST_TEMPLATE
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md
.github/workflows/: build-testnet.yml  build.yml  build_docker.yml  changelog.yml  docker.yml  gitopia-mirror.yml  interchaintest-e2e.yml  pr-checks.yml  push-docker-image.yml  release.yml  tests.yml
__mock__/: create-album.json  create-artist.json  verify-album.json  verify-artist.json  verify-distributor.json  verify-track.json
app/: ante_handler.go  ante_handler_test.go  app.go  app_test.go  config.go  const.go  encoding.go  export.go  export_custom.go  export_test.go  genesis.go  init.go  init_test.go  invariants.go  modules.go  posthandler.go  prefix.go  sim_test.go  state.go  test_helper.go  test_helpers.go  test_util.go  types.go  utils.go
app/benchmarks/: txsize_test.go
app/helpers/: global_errors.go  mock.go
app/keepers/: acceptedQueries.go  keepers.go  keys.go
app/params/: amino.go  config.go  proto.go
app/testing/: abci.go  fund.go  test_suite.go  wasm.go
app/testutil/: abci.go  fund.go  test_suite.go
app/upgrades/: README.md  types.go
btsgutils/: generic_helper.go  slice_helper.go
btsgutils/btsgcli/: dynamic.go  flag_advice.go  index_cmd.go  parsers.go  query_cmd_wrap.go  string_formatter.go  tx_cmd_wrap.go
cli_test/: README.md  cli_test.go  test_helpers.go
client/docs/: config.json
cmd/bitsongcli/: main.go
cmd/bitsongd/: genaccounts.go  main.go  replay.go  testnet.go
cmd/gaiacli/: main.go
cmd/gaiad/: main.go
cmd/gaiadebug/: README.md  hack.go  main.go
cmd/init/: collect.go  genesis_accts.go  genesis_accts_test.go  gentx.go  gentx_test.go  init.go  init_test.go  testnet.go  utils.go  utils_test.go  validate_genesis.go
contrib/: Dockerfile.test  add_content.sh  gitian-build.sh  init_chain.sh  register_player.sh  single-node-mac.sh  single-node.sh
contrib/devtools/: Makefile  proto-tools-installer.sh
contrib/gitian-descriptors/: gitian-darwin.yml  gitian-linux.yml  gitian-windows.yml
contrib/localnet/: Makefile
contrib/samples/: metadata.json
docs/: DOCS_README.md  README.md  SUMMARY.md  bitsongcli.md  delegator-guide-cli.md  deploy-testnet.md  gaiacli.md  genesis-state.md  genesis.md  gravitydex_guide.md  guide-join-first-testnet.md  hd-wallets.md  installation.md  join-mainnet.md  join-testnet.md  keys.md  ledger.md  reproducible-builds.md  upgrade-node.md  what-is-bitsong.md  what-is-gaia.md
docs/guide/: validators.md
docs/launch/: blog-1-en.md  blog-1-kr.md  blog-2-en.md
docs/releases/: TEMPLATE.md  v0.23.1.md
docs/static/: swagger.yaml
docs/validators/: overview.md  security.md  validator-faq.md  validator-setup.md
e2e/: README.md  basic_start_test.go  basic_upgrade_test.go  ci.go  go.mod  go.sum  polytone_suite.go  polytone_test.go  polytone_types.go  setup.go  slashing_test.go  utils.go
e2e/conformance/: cosmwasm.go
e2e/contracts/: polytone_listener.wasm  polytone_note.wasm  polytone_proxy.wasm  polytone_tester.wasm  polytone_voice.wasm
e2e/cw-orchestrator/: Cargo.toml  README.md
e2e/helpers/: common.go  types.go
e2e/ict/: basic_start_test.go  basic_upgrade_test.go  go.mod  go.sum  module_pfm_test.go  polytone_suite.go  polytone_test.go  polytone_types.go  setup.go  slashing_test.go  utils.go
e2e/integrations/: cosmwasm.go
e2e/localbitsong/: README.md
lcd_test/: helpers.go  lcd_test.go
lcd_test/testdata/: setup.sh
networks/: Makefile  gentx-f9ac58b23042570b3cc8c0b68f70f8f63fa0e08f.json  new-testnet.sh  upgrade-gaiad.sh
networks/local/: Makefile
proto/: README.md  buf.gen.pulsar.yaml  buf.yaml
proto/fantoken/: fanToken.proto  genesis.proto  query.proto  tx.proto
scripts/: README.md  dev_setup.sh  gen-pulsar.sh  gen-swagger.sh  generate-docs.sh  generate-swagger-docs.sh  init.sh  localnet.sh  polytone.sh  prep-release.sh  protoc-swagger-gen.sh  protocgen.sh  run_with_data.sh  sample-create-pool.sh  sample-deposit.sh  sample-swap.sh  sample-withdraw.sh  test_node.sh  testnet.py  testnet.sh
scripts/api/: generate-swagger-docs.sh  protocgen-any.sh  protocgen-pulsar.sh
scripts/changelog/: cliff.toml  gen.sh
scripts/commands/: candymachine.sh  launchpad.sh  marketplace.sh  nft.sh
scripts/docker/: run_bitsongd.sh  setup_and_run.sh  setup_bitsongd.sh
scripts/hyperlane/: .env.example  01-chain.sh  02-hyperlane.sh  03-evm-deploy.sh  04-agents.sh  05-test.sh  06-fantoken-route.sh  07-fantoken-test.sh  lib.sh  run-all.sh  status.sh  stop.sh
scripts/install/: install_ubuntu.sh
scripts/makefiles/: bsh.mk  build.mk  cache.mk  devtools.mk  docker.mk  e2e.mk  format.mk  hl.mk  ict.mk  localnet.mk  proto.mk  tests.mk
scripts/release/: prep-release.sh  semver.sh  semver_funcs.sh  tools.sh
server/: start.go  types.go  util.go
swagger/: config.json  swagger.yaml
swagger/statik/: statik.go
swagger/swagger-ui/: swagger.yaml
test-data/: trackInfo.json
test-data/mp21/: download-big-label.json
testdata/: accounts.json  list.m3u8  out.json  segment000.ts  segment001.ts  segment002.ts  test.txt
testnet-1/: genesis.json
testnet-1/gentx/: forbole.json  gentx-204ae1ecee3df26070f7703afd96269943fa8f93.json  gentx-21af16077ba1990db80b6a6e3038460693e2fe7f.json  gentx-260f3463f5093a5f590938c04b1a3e18740893cd.json  gentx-274530d4f962bae8ad3ad2e4830e98a8e6645233.json  (+26 more)
tests/: README.md
tests/bsh/: README.md
tests/bsh/aa/: Cargo.toml  README.md  a.sh
tests/bsh/aa/ibaa-scripts/: .env.example  Cargo.toml
tests/bsh/aa/ibaa-scripts/src/: lib.rs
tests/bsh/aa/src/: lib.rs
types/: assets.go  codec.go  common.go  graded_account.go  graded_account_test.go  prefix.go
version/: command.go  version.go
x/: README.md
(+1073 files in other folders)
